# thomann-price-tracker

./: .gitignore  README.md  prices.json  pyproject.toml
.github/workflows/: thomann-price-check.yml
src/: scraper.py
src/classes/: priceRepository.py  webScraper.py
src/models/: priceExtractionConfig.py
src/tests/: test_price_repository.py  test_scraper_main.py  test_web_scraper.py
